fixed line-wrap in title on heading

--- a/ui/src/components/Navbar/Navbar.scss
+++ b/ui/src/components/Navbar/Navbar.scss
@@ -31,7 +31,8 @@
     }
 
     .heading-title {
-      width: 21.5em;
+      white-space: nowrap;
+      padding-right: 16.5em;
     }
 
     .pt-popover-target {
